<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/startDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:hint="@string/starting_date"
        android:textColor="@color/colorPrimaryDark"
        android:textColorHint="@color/colorPrimaryDark"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/finishDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="80dp"
        android:hint="@string/finish_date"
        android:textColorHint="@color/colorPrimaryDark"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="30sp"/>

    <TextView
        android:id="@+id/hour"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="130dp"
        android:hint="@string/starting_hour"
        android:textColorHint="@color/colorPrimaryDark"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/when"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/hour"
        android:layout_centerHorizontal="true"
        android:text="@string/when"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/available"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/Monday"
        android:layout_below="@+id/Wednesday"
        android:text="@string/available_exercises"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="20sp" />

    <CheckBox
        android:id="@+id/Monday"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/when"
        android:layout_toStartOf="@+id/finishDate"
        android:text="@string/monday" />

    <CheckBox
        android:id="@+id/Tuesday"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/available"
        android:layout_below="@+id/Monday"
        android:text="@string/tuesday" />

    <CheckBox
        android:id="@+id/Wednesday"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/Monday"
        android:layout_below="@+id/Tuesday"
        android:text="@string/wednesday" />

    <CheckBox
        android:id="@+id/Thursday"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/when"
        android:layout_centerHorizontal="true"
        android:text="@string/thursday" />

    <CheckBox
        android:id="@+id/Friday"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/Monday"
        android:layout_centerHorizontal="true"
        android:text="@string/friday" />

    <CheckBox
        android:id="@+id/Saturday"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/when"
        android:layout_toEndOf="@+id/finishDate"
        android:text="@string/saturday" />

    <CheckBox
        android:id="@+id/Sunday"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/Monday"
        android:layout_toEndOf="@+id/finishDate"
        android:text="@string/sunday" />

    <Spinner
        android:id="@+id/exercises"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/available"
        android:layout_centerHorizontal="true" />

    <Button
        android:id="@+id/select_exercise"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/available"
        android:layout_toEndOf="@+id/when"
        android:text="@string/select_exercise" />

    <TextView
        android:id="@+id/selected_exercises"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/exercises"
        android:text="@string/selected_exercises"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="18sp" />


</RelativeLayout>